Fix visibility of "connect wallet" button at /app page with screen width 576-1370

--- a/src/components/Burger/styles.scss
+++ b/src/components/Burger/styles.scss
@@ -10,6 +10,17 @@
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1370px) {
+  .header-main-btn-container {
+    position: fixed;
+    top: -110px;
+  }
+  .menu {
+    justify-content: right !important;
+    padding-right: 100px;
+  }
+}
+
 .mobile-logo-img {
   width: 100%;
   box-sizing: border-box;
